Add Sign-Up, Sign-In

--- a/auth/index.html
+++ b/auth/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
+        <link rel="icon" type="image/x-icon" href="/assets/todo-logo.png" />
 
         <script type="module" src="auth.js"></script>
 
@@ -23,7 +23,7 @@
 
     <body>
         <header class="page-header">
-            <img class="logo" src="/assets/html_css_js.png" />
+            <img class="logo" src="/assets/todo-logo.png" />
             <p class="title">User Auth</p>
         </header>
 
