--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <!-- css -->
         <link rel="stylesheet" href="/styles/reset.css" />
         <link rel="stylesheet" href="/styles/global.css" />
+        <link rel="stylesheet" href="/styles/todos.css" />
         <!-- add link for page specific css -->
     </head>
 
