--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
         </header>
 
         <main>
+            <p id="error" class="error"></p>
+
+            <form id="add-todo-form">
+                <h3>Add ToDo</h3>
+                <label>Description </label
+                ><input type="text" name="description" id="todo-description" />
+                <button id="submit-btn">Submit</button>
+            </form>
+
             <ul id="todo-list"></ul>
         </main>
     </body>
