--- a/auth/index.html
+++ b/auth/index.html
@@ -38,6 +38,7 @@
                     Password
                     <input type="password" name="password" required />
                 </label>
+                <button></button>
                 <p class="error"></p>
                 <a href=""></a>
             </form>
