Fix Sign out link on profile page

--- a/profile/index.html
+++ b/profile/index.html
@@ -34,7 +34,7 @@
             <nav>
                 <a href="/">Home</a>
                 <a id="profile-link" href="/">Profile</a>
-                <a id="sign-out-link" href="auth">Sign Out</a>
+                <a id="sign-out-link" href="../auth/">Sign Out</a>
             </nav>
         </header>
 
